# liver_disease_prediction

./: README.md  pyproject.toml
notebooks/: bayes.ipynb  data_preparation.ipynb  ensemble.ipynb  gradient_boosting.ipynb  knn.ipynb  logistic_regression.ipynb  mlp.ipynb  one_rule.ipynb  svm.ipynb  tree.ipynb
