[project]
name = "liver-disease-prediction"
version = "0.1.0"
description = "Multiclass classification ML project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel<7.0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
